syntax="proto3";

import "google/protobuf/timestamp.proto";

message Worker{
        string worker_name=1;
        int32 worker_id=2;

        message Query{
            string result_found=1;
            string query=2;
            string query_id=3;
            string path=4;
        }

        message Index{
	    string message=1;
            string file_name=2;
            string file_path=3;
        }

        repeated Query queries=3;
        repeated Index Indexes=4;
        bool invalid_command=5;

        google.protobuf.Timestamp last_indexed=6;
}

message WorkersLog{
        repeated Worker workers=1;
}
